fix outline contrast for quicklinks

--- a/source/_patterns/03-organisms/headers/wwu-header/wwu-header.scss
+++ b/source/_patterns/03-organisms/headers/wwu-header/wwu-header.scss
@@ -116,6 +116,7 @@ wwu-header {
       width: initial !important;
       height: initial !important;
       padding: var(--space--2xs);
+      outline-color: var(--blue--lighter--60);
     }
 
     color: var(--white);
